tests/derive_errors/enum/struct_variants_no_attr.rs
#[derive(jtd_derive::JsonTypedef)]
enum Foo {
    Bar { x: u32 },
}

fn main() {}
